<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".AccountActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        >
        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >
            <Toolbar
                android:id="@+id/toolbarRegistro"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Crear cuenta"
                    android:textSize="18dp"
                    android:textStyle="bold"
                    android:textColor="@color/white"
                    />
            </Toolbar>
        </com.google.android.material.appbar.AppBarLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center"
                android:padding="20dp"

                >


                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:theme="@style/EditTextBlack"
                    >
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/username_register"
                        android:drawablePadding="@dimen/padding_drawable"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_name_user"
                        android:inputType="textPersonName"
                        android:textSize="16dp"
                        />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:theme="@style/EditTextBlack"
                    android:layout_marginTop="@dimen/et_mt_login"

                    >
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/email_register"
                        android:textSize="16dp"
                        android:layout_width="match_parent"
                        android:drawablePadding="@dimen/padding_drawable"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_create_email_user"
                        android:text="example@gmail.com"
                        android:inputType="textEmailAddress"
                        />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:theme="@style/EditTextBlack"
                    android:layout_marginTop="@dimen/et_mt_login"

                    >
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/password_register1"
                        android:textSize="16dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawablePadding="@dimen/padding_drawable"
                        android:hint="@string/hint_create_pass1"
                        android:inputType="textPassword"
                        />

                </com.google.android.material.textfield.TextInputLayout>
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:theme="@style/EditTextBlack"
                    android:layout_marginTop="@dimen/et_mt_login"

                    >
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/password_register2"
                        android:textSize="16dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_create_pass2"
                        android:drawablePadding="@dimen/padding_drawable"

                        android:inputType="textPassword"
                        />

                </com.google.android.material.textfield.TextInputLayout>

                <Button
                    android:id="@+id/btn_register"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:text="@string/text_button_account"
                    android:theme="@style/RaisedButtom" />

            </LinearLayout>

        </ScrollView>
    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>