<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        tools:context=".LoginActivity"
        android:weightSum="1"
        >
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="35dp"
            android:layout_weight="0.6">

            <ImageView
                android:id="@+id/logo"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:layout_centerInParent="true"
                android:background="@drawable/logo_oficial"
                />

        </RelativeLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.4"
            android:fillViewport="true"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"

                android:padding="@dimen/pd_horizontal_login"
                >
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:theme="@style/EditTextBlack"

                    >
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/email_user"
                        android:drawablePadding="@dimen/padding_drawable"
                        android:textSize="16dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_email"
                        android:inputType="textEmailAddress"
                        />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:theme="@style/EditTextBlack"
                    android:layout_marginTop="@dimen/et_mt_login"

                    >

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/password_user"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawablePadding="@dimen/padding_drawable"
                        android:hint="@string/hint_password"
                        android:inputType="textPassword"
                        android:textSize="16dp" />

                </com.google.android.material.textfield.TextInputLayout>

                <Button
                    android:id="@+id/btn_login"
                    android:layout_marginTop="@dimen/tp_button_login"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/text_button_login"
                    android:theme="@style/RaisedButtom"
                    />
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_marginTop="10dp"
                    android:layout_height="match_parent"
                    android:gravity="center_horizontal"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="¿No tienes cuenta? Registrate"
                        android:textStyle="italic"
                        android:textSize="12dp"
                        android:textColor="@color/black"
                        android:gravity="center"
                        android:layout_marginTop="5dp"
                        />

                    <TextView
                        android:id="@+id/tv_createAccount"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/aqui"
                        android:layout_marginLeft="8dp"
                        android:textStyle="bold"
                        android:textSize="12dp"
                        android:textColor="@color/black"
                        android:gravity="center"
                        android:layout_marginTop="5dp"
                        android:clickable="true"
                        />

                </LinearLayout>


            </LinearLayout>



        </ScrollView>
    </LinearLayout>

